# ZF_LOG

./: .gitignore  CMakeLists.txt
ZF_LOG/include/: datatype.h  logapi.h  loginfo.h  readfromlog.h  zf_log.h
ZF_LOG/src/: datatype.cpp  fille.cpp  loginfo.cpp  readfromlog.cpp  zf_log.cpp
ZF_LOG_TEST/src/: main.cpp
cmake/: zf_log.cmake  zf_log_test.cmake
